# mission-control

./: .gitignore  CLAUDE.md  README.md  config.json  keyboard-shortcuts.json  main.py  pyproject.toml
.claude/: README.md
mission_control/: __init__.py  __main__.py  auth.py  components.py  config.py  k8s.py  url_parser.py
mission_control/views/: book_connections.py  books.py  deployments.py  secrets.py  trigger_instances.py
